fix for project title in dark mode

--- a/src/scss/modules/_themes.scss
+++ b/src/scss/modules/_themes.scss
@@ -43,7 +43,7 @@
       padding-top: 1em;
     }
     .project__title {
-      color: $mainColorDarkThemeDark;
+      color: $white;
     }
     .project__link,
     .project__repo {
